--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -181,6 +181,9 @@ th {
 .result-cell {
     border: 0.5px solid black !important;
     color: black !important;
+    width: 50px !important;
+    text-align: center !important;
+    padding: 0px !important;
 }
 
 /* default blazor css elements */
