--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -33,7 +33,7 @@
                                            Label="Date of Birth"
                                            Class="field-md"
                                            Required="true" />
-                            <MudCountrySelect @bind-Value="Model.Country"
+                            <CountrySelect @bind-Value="Model.Country"
                                               Class="field-md" />
                             <MudTextField T="string"
                                           @bind-Value="Model.Biography"
