--- a/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TeamEditor.razor
@@ -9,7 +9,7 @@
                     <MudPaper Elevation="15" Class="pa-4">
                         <MudStack>
                             <MudTextField T="string" @bind-Value="@Model.Name" Label="Name" Class="field-md" />
-                            <MudCountrySelect @bind-Value="Model.Country" Class="field-md" />
+                            <CountrySelect @bind-Value="Model.Country" Class="field-md" />
                             <MudTextField T="string" @bind-Value="@Model.Biography" Label="Biography" Lines="5" />
                         </MudStack>
                     </MudPaper>
