--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -573,13 +573,25 @@
 
     void DeterminePositions()
     {
+        var actualPositions = GetCurrentActualPositions();
+
         int positionIndex = 0;
         foreach (var driver in Model.RaceDrivers.Where(e => e.Status == RaceStatus.Racing).OrderBy(e => e.Position))
         {
             var lastScore = driver.LapScores.Last();
 
-            int gainedPositions = driver.Position - ++positionIndex;
-            int positionChange = //positieverandering!!!!????!?!?!!???!!!
+            int positionChange = driver.Position - actualPositions[driver.SeasonDriverId];
+
+            // Gained positions
+            if (positionChange > 0)
+            {
+
+            }
+            // Lost positions
+            else if (positionChange < 0)
+            {
+
+            }
 
             while (gainedPositions > 0)
             {
@@ -624,6 +636,84 @@
             }
 
             driver.LastScore = lastScore.Score;
+        }
+    }
+
+    Dictionary<long, int> GetCurrentActualPositions()
+    {
+        var actualPositions = new Dictionary<long, int>();
+        int positionIndex = 0;
+
+        foreach (var driver in Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenByDescending(e => e.LapSum))
+            actualPositions.Add(driver.SeasonDriverId, ++positionIndex);
+
+        return actualPositions;
+    }
+
+    void HandlePositionGain(RaceDriver driver, LapScore lastScore, int gainedPositions)
+    {
+        var actualPositions = GetCurrentActualPositions();
+
+        while (gainedPositions > 0)
+        {
+            var abovePosition = driver.Position - 1;
+            if (abovePosition == 0)
+                break;
+
+            var aboveDriverId = actualPositions.First(e => e.Value == abovePosition).Key;
+            var aboveDriver = Model.RaceDrivers.First(e => e.SeasonDriverId == aboveDriverId);
+
+            // Driver above is teammate AND support driver AND attacker is main driver, swap time!
+            if (aboveDriver.SeasonTeamId == driver.SeasonTeamId && driver.Role == TeamRole.Main && aboveDriver.Role == TeamRole.Support)
+            {
+                lastScore.RacerEvents |= RacerEvent.Swap;
+                aboveDriver.LapScores.Last().RacerEvents |= RacerEvent.Swap;
+            }
+            else if (!aboveDriver.InstantOvertaken)
+            {
+                // Subtract attack value from defense, what's left is how much the attacker is hindered
+                var attackingResult = driver.Attack + NumberHelper.RandomInt(battleRng);
+                var defendingResult = aboveDriver.Defense + NumberHelper.RandomInt(battleRng);
+                var battleCost = defendingResult - attackingResult;
+
+                if (battleCost > 0)
+                    lastScore.Score -= battleCost;
+
+                // Overtake failed
+                if (aboveDriver.LapSum > driver.LapSum)
+                {
+                    aboveDriver.DefensiveCount++;
+                    driver.LastScore = lastScore.Score;
+                    break;
+                }
+
+                // It only counts as an overtake if it wasn't in an instant
+                driver.OvertakeCount++;
+            }
+
+            // Overtake succeeded, driver gains a position!
+            (driver.Position, aboveDriver.Position) = (aboveDriver.Position, driver.Position);
+
+            gainedPositions--;
+        }
+    }
+
+    void HandlePositionLoss(RaceDriver driver, LapScore lastScore, int lostPositions)
+    {
+        var actualPositions = GetCurrentActualPositions();
+
+        while (lostPositions < 0)
+        {
+            var belowPosition = driver.Position + 1;
+            if (belowPosition > actualPositions.Count)
+                break;
+
+            var belowDriverId = actualPositions.First(e => e.Value == belowPosition);//.Key
+            var belowDriver = Model.RaceDrivers.First(e => e.SeasonDriverId == belowDriverId);
+
+
+
+            lostPositions++;
         }
     }
 
