--- a/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TrackEditor.razor
@@ -14,7 +14,7 @@
                             <MudText Typo="Typo.subtitle1">Features</MudText>
                             <MudDivider />
                             <MudTextField T="string" @bind-Value="Model.Name" Label="Name" Class="field-md" />
-                            <MudCountrySelect @bind-Value="Model.Country" Class="field-md my-2" />
+                            <CountrySelect @bind-Value="Model.Country" Class="field-md my-2" />
                             <MudStack Row="true" Spacing="6">
                                 <MudNumericField T="double" @bind-Value="Model.Length" Label="Length" Format="N2" Adornment="Adornment.End" AdornmentText="Km" AdornmentColor="Color.Tertiary" DebounceInterval="500" OnDebounceIntervalElapsed="HandleLengthLapCalc" HelperText="@expectedLapCount" />
                             </MudStack>
