Probably resolved the overtaking issue, assuming we only need to calculate position gains

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -116,8 +116,9 @@
             new BreadcrumbItem("Home", href: "/"),
         });
 
-        recentRaces = await _raceService.GetRecentlyFinishedCalendarRaces(raceAmount);
-        recentRaces.Reverse();
+        // Big slowdown?
+        //recentRaces = await _raceService.GetRecentlyFinishedCalendarRaces(raceAmount);
+        //recentRaces.Reverse();
 
         await RetrieveUpcomingRaces();
     }
