--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -575,7 +575,6 @@
     {
         var actualPositions = GetCurrentActualPositions();
 
-        int positionIndex = 0;
         foreach (var driver in Model.RaceDrivers.Where(e => e.Status == RaceStatus.Racing).OrderBy(e => e.Position))
         {
             var lastScore = driver.LapScores.Last();
@@ -585,55 +584,13 @@
             // Gained positions
             if (positionChange > 0)
             {
-
+                HandlePositionGain(driver, lastScore, positionChange);
             }
             // Lost positions
-            else if (positionChange < 0)
-            {
-
-            }
-
-            while (gainedPositions > 0)
-            {
-                var abovePosition = driver.Position - 1;
-                if (abovePosition == 0)
-                    break;
-
-                var aboveDriver = Model.RaceDrivers.First(e => e.Position == abovePosition);
-
-                // Driver above is teammate AND support driver AND attacker is main driver, swap time!
-                if (aboveDriver.SeasonTeamId == driver.SeasonTeamId && driver.Role == TeamRole.Main && aboveDriver.Role == TeamRole.Support)
-                {
-                    lastScore.RacerEvents |= RacerEvent.Swap;
-                    aboveDriver.LapScores.Last().RacerEvents |= RacerEvent.Swap;
-                }
-                else if (!aboveDriver.InstantOvertaken)
-                {
-                    // Subtract attack value from defense, what's left is how much the attacker is hindered
-                    var attackingResult = driver.Attack + NumberHelper.RandomInt(battleRng);
-                    var defendingResult = aboveDriver.Defense + NumberHelper.RandomInt(battleRng);
-                    var battleCost = defendingResult - attackingResult;
-
-                    if (battleCost > 0)
-                        lastScore.Score -= battleCost;
-
-                    // Overtake failed
-                    if (aboveDriver.LapSum > driver.LapSum)
-                    {
-                        aboveDriver.DefensiveCount++;
-                        driver.LastScore = lastScore.Score;
-                        break;
-                    }
-
-                    // It only counts as an overtake if it wasn't in an instant
-                    driver.OvertakeCount++;
-                }
-
-                // Overtake succeeded, driver gains a position!
-                (driver.Position, aboveDriver.Position) = (aboveDriver.Position, driver.Position);
-
-                gainedPositions--;
-            }
+            //else if (positionChange < 0)
+            //{
+            //    HandlePositionLoss(driver, lastScore, positionChange);
+            //}
 
             driver.LastScore = lastScore.Score;
         }
@@ -652,16 +609,13 @@
 
     void HandlePositionGain(RaceDriver driver, LapScore lastScore, int gainedPositions)
     {
-        var actualPositions = GetCurrentActualPositions();
-
         while (gainedPositions > 0)
         {
             var abovePosition = driver.Position - 1;
             if (abovePosition == 0)
                 break;
 
-            var aboveDriverId = actualPositions.First(e => e.Value == abovePosition).Key;
-            var aboveDriver = Model.RaceDrivers.First(e => e.SeasonDriverId == aboveDriverId);
+            var aboveDriver = Model.RaceDrivers.First(e => e.Position == abovePosition);
 
             // Driver above is teammate AND support driver AND attacker is main driver, swap time!
             if (aboveDriver.SeasonTeamId == driver.SeasonTeamId && driver.Role == TeamRole.Main && aboveDriver.Role == TeamRole.Support)
@@ -683,7 +637,6 @@
                 if (aboveDriver.LapSum > driver.LapSum)
                 {
                     aboveDriver.DefensiveCount++;
-                    driver.LastScore = lastScore.Score;
                     break;
                 }
 
@@ -708,10 +661,34 @@
             if (belowPosition > actualPositions.Count)
                 break;
 
-            var belowDriverId = actualPositions.First(e => e.Value == belowPosition);//.Key
+            var belowDriverId = actualPositions.First(e => e.Value == belowPosition).Key;
             var belowDriver = Model.RaceDrivers.First(e => e.SeasonDriverId == belowDriverId);
+            var belowLastScore = belowDriver.LapScores.Last();
 
+            if (belowDriver.SeasonTeamId == driver.SeasonTeamId && driver.Role == TeamRole.Support && belowDriver.Role == TeamRole.Main)
+            {
+                lastScore.RacerEvents |= RacerEvent.Swap;
+                belowLastScore.RacerEvents |= RacerEvent.Swap;
+            }
+            else if (!driver.InstantOvertaken)
+            {
+                var defendingResult = driver.Defense + NumberHelper.RandomInt(battleRng);
+                var attackingResult = belowDriver.Attack + NumberHelper.RandomInt(battleRng);
+                var battleCost = defendingResult - attackingResult;
 
+                if (battleCost > 0)
+                    belowLastScore.Score -= battleCost;
+
+                if (belowDriver.LapSum > driver.LapSum)
+                {
+                    driver.DefensiveCount++;
+                    break;
+                }
+
+                belowDriver.OvertakeCount++;
+            }
+
+            (driver.Position, belowDriver.Position) = (belowDriver.Position, driver.Position);
 
             lostPositions++;
         }
