added crumbs everywhere

--- a/SimTECH/SimTECH/Pages/Credits.razor
+++ b/SimTECH/SimTECH/Pages/Credits.razor
@@ -32,6 +32,7 @@
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
             new BreadcrumbItem("Home", href: ""),
+            new BreadcrumbItem("Credits", href: "credits", disabled: true),
         });
     }
 }
