--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -1,4 +1,5 @@
 ﻿@page "/drivers"
+@inject BreadcrumbProvider _bread
 @inject DriverService DriverService
 @inject TraitService TraitService
 @inject NavigationManager _nav
@@ -73,6 +74,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Drivers", href: "drivers", disabled: true),
+        });
+
         CurrentDrivers = await DriverService.GetCurrentDrivers();
         DriverData = await DriverService.GetDrivers();
     }
