--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -1,5 +1,4 @@
 ﻿@page "/humanbeinggenerator"
-
 @using System.Text.Json
 @using System.Text.Json.Serialization
 @inject DriverService _driverService
@@ -157,6 +156,7 @@
         {
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Drivers", href: "drivers"),
+            new BreadcrumbItem("Human Being Generator", href: "humanbeinggenerator", disabled: true),
         });
 
         availableLanguages = _humanProvider.GetLanguageHumanInfo();
