--- a/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitAssign.razor
@@ -120,6 +120,7 @@
         {
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Traits", href: "traits"),
+            new BreadcrumbItem("Assign traits", href: "traitassign", disabled: true),
         });
 
         AllTraits = await _traitService.GetTraits();
