--- a/SimTECH/SimTECH/Pages/Factors/Incidents.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Incidents.razor
@@ -1,4 +1,5 @@
 ﻿@page "/incidents"
+@inject BreadcrumbProvider _bread
 @inject IncidentService _incidentService
 @inject IDialogService DialogService
 
@@ -38,6 +39,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Incidents", href: "incidents", disabled: true),
+        });
+
         IncidentData = await _incidentService.GetIncidents(StateFilter.All);
     }
 
