--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -1,4 +1,5 @@
 ﻿@page "/manufacturers"
+@inject BreadcrumbProvider _bread
 @inject ManufacturerService ManufacturerService
 @inject IDialogService DialogService
 
@@ -53,6 +54,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Manufacturers", href: "manufacturers", disabled: true),
+        });
+
         ManufacturerData = await ManufacturerService.GetManufacturers();
     }
 
