--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -1,4 +1,5 @@
 ﻿@page "/race/{RaceId:long}"
+@inject BreadcrumbProvider _bread
 @inject IncidentService _incidentService
 @inject RaceService _raceService
 @inject SeasonService _seasonService
@@ -273,6 +274,15 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: ""),
+            new BreadcrumbItem("Seasons", href: "seasons"),
+            new BreadcrumbItem("Overview", href: $"overview/{Model.Season.Id}"),
+            new BreadcrumbItem("Raceweek", href: $"raceweek/{RaceId}"),
+            new BreadcrumbItem("Race", href: $"race/{RaceId}", disabled: true),
+        });
+
         tyres = await _tyreService.GetTyres(StateFilter.Active);
         possibleIncidents = await _incidentService.GetIncidents(StateFilter.Active);
 
