--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -3,6 +3,7 @@
 @using MudExtensions.Enums;
 @using MudExtensions.Utilities
 @using SimTECH.Pages.Season.EntrantWizard.Steps
+@inject BreadcrumbProvider _bread
 @inject SeasonService _seasonService
 @inject SeasonEntrantService _entrantService
 @inject NavigationManager _nav
@@ -130,6 +131,14 @@
     {
         Season = await _seasonService.GetSeasonById(SeasonId);
         PreviousSeason = await _seasonService.FindRecentClosedSeason(Season.LeagueId);
+
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: ""),
+            new BreadcrumbItem("Seasons", href: "seasons"),
+            new BreadcrumbItem("Overview", href: $"overview/{Season.Id}"),
+            new BreadcrumbItem("Wizard", href: $"entrantwizard/{Season.Id}"),
+        });
 
         loading = false;
     }
