--- a/SimTECH/SimTECH/Pages/Setup/Engines.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Engines.razor
@@ -1,4 +1,5 @@
 ﻿@page "/engines"
+@inject BreadcrumbProvider _bread
 @inject EngineService EngineService
 @inject IDialogService DialogService
 
@@ -42,6 +43,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Engines", href: "engines", disabled: true),
+        });
+
         EngineData = await EngineService.GetEngines();
     }
 
