--- a/SimTECH/SimTECH/Pages/Setup/Teams.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Teams.razor
@@ -1,4 +1,5 @@
 ﻿@page "/teams"
+@inject BreadcrumbProvider _bread
 @inject TeamService TeamService
 @inject TraitService TraitService
 @inject IDialogService DialogService
@@ -57,6 +58,12 @@
 
     protected override async Task OnInitializedAsync()
     {
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Teams", href: "teams", disabled: true),
+        });
+
         TeamData = await TeamService.GetTeams();
     }
 
